@@ -11,6 +11,13 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2025-03-20> *0.9.9*
+
+Intro message with model management options (select, pull, delete) and option for recommended models to pull
+
+- Enhance model management and selection features
+- Display models available for download but not yet pulled
+
 ** <2025-03-19> *0.9.8*
 
 Added model management interface to pull and delete models
